# tcrm-task

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  tcrm_task_generated.rs
benches/: flatbuffers_conversion.rs  task_config.rs  task_executor.rs  task_spawner.rs
examples/: basic.rs  echo_stdin.rs  interactive_stdin.rs  process_group_optional.rs  tracing_message.rs  validation.rs
src/: lib.rs
src/flat_buffers/: mod.rs  tcrm_task.fbs  tcrm_task_generated.rs
src/flat_buffers/conversion/: config.rs  event.rs  mod.rs  state.rs
src/flatbuffers/: mod.rs  tcrm_task.fbs  tcrm_task_generated.rs
src/flatbuffers/conversion/: config.rs  error.rs  event.rs  event_old.rs  mod.rs  state.rs
src/flatbuffers/conversion/unit_tests/: config.rs  error.rs  event.rs  mod.rs  state.rs
src/helper/: tracing.rs
src/tasks/: config.rs  control.rs  error.rs  event.rs  integration_tests.rs  mod.rs  security.rs  signal.rs  state.rs  tests.rs  validator.rs
src/tasks/async_tokio/: mod.rs  process_group.rs  spawner.rs  tests.rs
src/tasks/async_tokio/direct/: command.rs  mod.rs  start.rs  tests.rs
src/tasks/async_tokio/direct/integration_tests/: mod.rs  setup_command.rs
src/tasks/async_tokio/direct/integration_tests/start/: basic.rs  mod.rs  process_id.rs  ready.rs  stdin.rs  timeout.rs
src/tasks/async_tokio/direct/watchers/: input.rs  mod.rs  output.rs  result.rs  timeout.rs  wait.rs
src/tasks/async_tokio/unit_tests/: mod.rs
src/tasks/async_tokio/unit_tests/spawner/: channel.rs  info.rs  mod.rs  state.rs  uptime.rs
src/tasks/process/: child.rs  control.rs  mod.rs  process_group.rs
src/tasks/process/action/: interrupt.rs  mod.rs  pause.rs  resume.rs  stop.rs  terminate.rs
src/tasks/process/group/: builder.rs  error.rs  mod.rs
src/tasks/process/group/action/: interrupt.rs  mod.rs  pause.rs  resume.rs  stop.rs  terminate.rs
src/tasks/tokio/: context.rs  control.rs  event.rs  executor.rs  mod.rs  process.rs  start.rs  state.rs
src/tasks/tokio/concurrent/direct/: start.rs
src/tasks/tokio/concurrent/direct/integration_tests/: mod.rs
src/tasks/tokio/concurrent/direct/integration_tests/start/: basic.rs  stdin.rs
src/tasks/tokio/concurrent/direct/watchers/: input.rs  wait.rs
src/tasks/tokio/concurrent/unit_tests/spawner/: uptime.rs
src/tasks/tokio/coordinate/: mod.rs  start.rs
src/tasks/tokio/coordinate/handler/: input.rs  mod.rs  output.rs  result.rs  terminate.rs  timeout.rs  wait.rs
src/tasks/tokio/coordinate/integration_tests/: basic.rs  fail.rs  helper.rs  invalid.rs  mod.rs  process_control.rs  ready.rs  stdin.rs  timeout.rs
src/tasks/tokio/handler/: input.rs  mod.rs  output.rs  result.rs  terminate.rs  timeout.rs  wait.rs
src/tasks/tokio/select/: executor.rs  mod.rs  start.rs
src/tasks/tokio/select/handler/: input.rs  output.rs  result.rs  terminate.rs  timeout.rs  wait.rs
src/tasks/tokio/select/integration_tests/: basic.rs
src/tasks/tokio/spawn/: mod.rs  process_group.rs  spawner.rs
src/tasks/tokio/spawn/direct/: start.rs
src/tasks/tokio/spawn/direct/integration_tests/: setup_command.rs
src/tasks/tokio/spawn/direct/integration_tests/start/: basic.rs  process_id.rs  ready.rs  timeout.rs
src/tasks/tokio/spawn/direct/watchers/: result.rs  wait.rs
src/tasks/tokio/spawn/unit_tests/spawner/: channel.rs  info.rs  state.rs
src/tasks/unit_tests/: mod.rs  validator.rs
src/tasks/unit_tests/config/: builder.rs  mod.rs  validation.rs
src/tasks/unit_tests/validator/: args.rs  command.rs  env.rs  mod.rs  ready_indicator.rs  timeout.rs  working_dir.rs
