[package]
name = "tcrm-task"
version = "0.3.7"
edition = "2024"
description = "Task execution unit for TCRM project"
repository = "https://github.com/xpcn2015/tcrm-task"
readme = "README.md"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/tcrm-task"
homepage = "https://github.com/xpcn2015/tcrm-task"
keywords = ["task", "process", "tcrm"]
categories = ["asynchronous", "command-line-utilities", "concurrency"]
exclude = [".vscode/*"]


[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"], optional = true }
tokio = { version = "1.47", features = [
    "rt-multi-thread",
    "time",
    "macros",
    "io-util",
    "process",
    "sync",
    "signal",
], optional = true }
futures = { version = "0.3", optional = true }
tracing = { version = "0.1", optional = true }
flatbuffers = { version = "25.2", optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["process", "signal"], optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_System_JobObjects",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Console",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
], optional = true }

[features]
default = ["tokio", "process-group", "tokio-select"]
tokio-select = ["tokio", "dep:nix", "dep:windows"]
tokio-spawn = ["tokio"]
tokio = ["dep:tokio", "dep:futures"]
std = []
flatbuffers = ["dep:flatbuffers"]
serde = ["dep:serde"]
tracing = ["dep:tracing"]
signal = ["dep:nix", "dep:windows"]
process-group = ["dep:nix", "dep:windows"]
pty = ["dep:nix", "dep:windows"]
tracing-release_max_level_off = ["tracing/release_max_level_off"]
tracing-release_max_level_error = ["tracing/release_max_level_error"]
tracing-release_max_level_warn = ["tracing/release_max_level_warn"]
tracing-release_max_level_info = ["tracing/release_max_level_info"]
tracing-release_max_level_debug = ["tracing/release_max_level_debug"]
tracing-release_max_level_trace = ["tracing/release_max_level_trace"]
tracing-max_level_off = ["tracing/max_level_off"]
tracing-max_level_error = ["tracing/max_level_error"]
tracing-max_level_warn = ["tracing/max_level_warn"]
tracing-max_level_info = ["tracing/max_level_info"]
tracing-max_level_debug = ["tracing/max_level_debug"]
tracing-max_level_trace = ["tracing/max_level_trace"]


[dev-dependencies]
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
criterion = { version = "0.7", features = ["html_reports"] }
serde_json = "1.0"
futures = "0.3"

[[example]]
name = "tracing_message"
required-features = ["tracing"]

[[bench]]
name = "flatbuffers_conversion"
harness = false
required-features = ["flatbuffers"]

[[bench]]
name = "task_config"
harness = false

[[bench]]
name = "task_spawner"
harness = false
required-features = ["tokio"]
